# MetaHead-ICP

./: .gitignore  Cargo.toml  README.md  deploy-production.sh  deploy.sh  dfx-production.json  dfx.json  package-lock.json  package.json
frontend/: README.md  index.html  package.json
frontend/src/app/: layout.tsx
frontend/src/app/hooks/: useAuctionEvents.js
frontend/src/app/ui/: ChestRedeemModal.jsx  CoinDisplay.jsx  GameMenu.jsx  LevelProgressBar.jsx  Marketplace.jsx  PlayerSelect.jsx
scripts/: build-frontend.sh  cycles-manager.sh  setup.sh  upgrade.sh
src/MetaHead-ICP-backend/: Cargo.toml
src/MetaHead-ICP-frontend/src/: App.jsx
src/auction/: Cargo.toml  auction.did
src/auction/src/: lib.rs
src/auction_factory/: Cargo.toml  auction_factory.did
src/auction_factory/src/: lib.rs
src/game_engine/: Cargo.toml  game_engine.did
src/game_engine/src/: lib.rs
src/game_token/: Cargo.toml  game_token.did
src/game_token/src/: lib.rs
src/mystery_box/: Cargo.toml  mystery_box.did
src/mystery_box/src/: lib.rs
src/player_nft/: Cargo.toml  player_nft.did
src/player_nft/src/: lib.rs
