[workspace]
members = [
    "src/game_token",
    "src/player_nft", 
    "src/auction_factory",
    "src/auction",
    "src/mystery_box",
    "src/game_engine"
]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
ic-cdk-timers = "0.7"
sha2 = "0.10"
hex = "0.4"
ciborium = "0.2.2"
icrc-ledger-types = "0.1"
num-bigint = "0.4"
num-traits = "0.2"

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true
panic = 'abort'
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
