[package]
name = "auction"
version = "0.1.0"
edition = "2021"
description = "Individual auction canister template for NFT trading"
repository = "https://github.com/your-repo/metahead-icp"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }

# For time-based auctions
ic-cdk-timers = { workspace = true } 